# bug-tracking-system

backend/: Cargo.toml
backend/src/: main.rs  routes.rs
backend/src/db/: mod.rs  models.rs
backend/src/handlers/: bug_handlers.rs
ci-cd/.github/workflows/: ci.yml
