[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.2", features = ["sync"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
